[package]
name = "ctrp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { version = "1.32", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }
aes-gcm    = "0.10"
rand       = "0.8"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono     = "0.4"
